<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUpActivity"
    android:background="@color/secondaryBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/setUpWelcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/lengthWarning"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/lenPassword"
            android:textColor="@color/red"
            android:textSize="12sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirmedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/matchWarning"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/incPassword"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passHint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="confirm password"
            android:ems="10"
            android:inputType="text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/biometricToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth"/>


    </LinearLayout>

    <Button
        android:id="@+id/browse_button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorKellyWillTellMeToChange"
        android:onClick="browseOnClick"
        android:text="@string/BrwsFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/disabledBtn"
        android:enabled="false"
        android:onClick="confirmOnClick"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/fileName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/fileFound"-->
<!--        android:textColor="@color/confirmGreen"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/confirm_button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/browse_button" />-->


</androidx.constraintlayout.widget.ConstraintLayout>

